# Riskfolio-Lib

./: .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  _config.yml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
continuous_integration/: install_dependencies.sh
docs/: requirements.txt
examples/: Assets.xlsx  KeyRates.xlsx  Librito.xlsx  README.md  Tutorial 1 - Classic Mean Risk Optimization.ipynb  Tutorial 1-Copy1.ipynb  Tutorial 1.ipynb  Tutorial 10 - Risk Parity Portfolio Optimization.ipynb  Tutorial 10.ipynb  Tutorial 11 - Risk Parity Portfolio Optimization using Risk Factors and Stepwise Regression.ipynb  Tutorial 11 - Risk Parity Portfolio Optimization with Risk Factors using Stepwise Regression.ipynb  Tutorial 11.ipynb  Tutorial 12 - Worst Case Mean Variance Portfolio Optimization.ipynb  Tutorial 12.ipynb  Tutorial 13 - Riskfolio-Lib and Xlwings.ipynb  Tutorial 13.ipynb  Tutorial 14 - Mean Ulcer Index Portfolio Optimization.ipynb  Tutorial 14.ipynb  Tutorial 15 - Mean Entropic Value at Risk (EVaR) Optimization.ipynb  Tutorial 15.ipynb  Tutorial 16 - Riskfolio-Lib Reports in Jupyter Notebook and Excel.ipynb  Tutorial 16.ipynb  Tutorial 17 - Riskfolio-Lib with MOSEK for Real Applications (612 assets and 4943 observations).ipynb  Tutorial 17.ipynb  Tutorial 18 - Multi Assets Algorithmic Trading Backtesting with Vectorbt.ipynb  Tutorial 18.ipynb  Tutorial 19 - Mean Entropic Drawdown at Risk (EDaR) Optimization.ipynb  Tutorial 19.ipynb  Tutorial 2.ipynb  (+85 more)
(+550 files in other folders)
